[package]
name = "gcra"
version = "0.1.0"
edition = "2021"
authors = ["Sam Shih <lytefast@github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lytefast/gcra-rs"
homepage = "https://github.com/lytefast/gcra-rs"
description = "A basic implementation of GCRA algorithm"
keywords = ["rate-limit"]

[dependencies]
thiserror = "1.0.31"

[dev-dependencies]
chrono = "0.4.19"