[package]
name = "gcra"
version = "0.3.2"
edition = "2021"
authors = ["Sam Shih <lytefast@github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lytefast/gcra-rs"
homepage = "https://github.com/lytefast/gcra-rs"
description = "A basic implementation of GCRA algorithm for rate limiting"
keywords = ["rate-limit", "rate", "limit", "gcra"]

[features]
default = ["rate-limiter"]
rate-limiter = ["thingvellir", "tokio"]

[dependencies]
thingvellir = { version = "0.0.6-alpha1", optional = true }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["time"], optional = true }

[dev-dependencies]
chrono = "0.4.19"

[[example]]
name = "rate_limiter"
required-features = ["rate-limiter"]
